# zero_to_prod_old

./: .env  Cargo.toml  Dockerfile  spec.yml
.github/workflows/: general.yml
configuration/: production.yml
scripts/: init_db.sh
src/: app_config.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
